# quellcode

./: .env.example  Cargo.toml  LICENSE  README.md  cliff.toml  typos.toml
.cargo/: config.toml
.github/workflows/: rust.yml  spelling.yml
assets/: test-code.txt  test-code2.txt
assets/themes/: kanagawa.tmTheme
crates/quellcode/: .gitattributes  Cargo.toml  Tauri.toml
crates/quellcode/data/icons/: icon.icns
crates/quellcode/frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
crates/quellcode/frontend/src/: App.svelte
crates/quellcode/frontend/src/components/: CodeMirror.svelte  Join.svelte  Modal.svelte  Progress.svelte
crates/quellcode/frontend/src/components/input/: Button.svelte  Combobox.svelte  FontSelector.svelte  TextInput.svelte
crates/quellcode/frontend/src/components/settings/: Assets.svelte  General.svelte  Settings.svelte  Syntax.svelte  Themes.svelte
crates/quellcode/frontend/src/lib/: state.ts  util.ts
crates/quellcode/frontend/src/lib/bindings/: FontFamily.ts  GeneratorEvent.ts  GeneratorInfo.ts  PropertyValue.ts  Template.ts  TemplateInfo.ts  TemplateUserData.ts
crates/quellcode/src/: app.rs  dir.rs  lib.rs  property.rs  template.rs
crates/quellcode/src/asset_store/: asset.rs
crates/quellcode/src/asset_store/asset/: object.rs
crates/quellcode/src/generator/: mod.rs  resolve.rs  svg.rs
crates/quellcode/src/scraping/github_api/: mod.rs
crates/quellcode/src/template/: helpers.rs  registry.rs
crates/sublime-color-scheme/: CHANGELOG.md  Cargo.toml  README.md
crates/sublime-color-scheme/src/: ast.rs  color.rs  error.rs  lib.rs  named.rs  parser.rs  util.rs
crates/sublime-color-scheme/src/ast/: adjuster.rs  color.rs  mod.rs
crates/vscode-theme/: Cargo.toml  LICENSE  README.md
crates/vscode-theme-syntect/: .cliffignore  CHANGELOG.md  Cargo.toml  README.md
crates/vscode-theme-syntect/src/: error.rs  lib.rs  named_color.rs
crates/vscode-theme/assets/: OneDark.json
crates/vscode-theme/src/: error.rs  lib.rs  named_color.rs
quellcode/: .env.example  .gitignore  .taurignore  Cargo.toml  LICENSE  Tauri.toml  build.rs
quellcode/.cargo/: config.toml
quellcode/assets/: resources.gresource.xml  style.css  theme.css
quellcode/assets/css/: style.css  theme.css
quellcode/assets/ui/: font_family_chooser.ui  split_button.ui  window.ui
quellcode/data/: resources.gresource.xml
quellcode/data/css/: base.css  style.css  theme.css  theme.scss
quellcode/data/css/libadwaita/: gtk-dark.css  gtk-light.css  libadwaita-tweaks.css  libadwaita.css
quellcode/data/ui/: font_family_chooser.ui  settings.ui  window.ui
quellcode/data/ui/settings/: window.ui
quellcode/data/ui/settings/asset_store/: asset_details.ui
quellcode/frontend/: .prettierrc  index.html  package.json  tsconfig.app.json  vite.config.ts
quellcode/frontend/src/: App.svelte  app.css
quellcode/frontend/src/components/: Icon.svelte  Listbox.svelte
quellcode/frontend/src/components/input/: Button.svelte  CodeView.svelte  Combobox.svelte  FontSelector.svelte  Listbox.svelte  Range.svelte
quellcode/frontend/src/lib/: icons.ts
quellcode/frontend/src/lib/bindings/: GeneratorInfo.ts  GeneratorOptions.ts  Property.ts  PropertyInfo.ts  PropertyType.ts  StringPropertySubtype.ts  ThemeFormat.ts
quellcode/src/: dir.rs  lib.rs  main.rs  property.rs  util.rs
quellcode/src/app/: application.rs  config.rs  dir.rs  mod.rs  property.rs  state.rs  util.rs  window.rs
quellcode/src/app/asset_store/: indexing.rs  message.rs  mod.rs
quellcode/src/app/asset_store/asset/: asset.rs  file.rs  mod.rs  object.rs  widget.rs
quellcode/src/app/generator/: html.rs  mod.rs  svg.rs
quellcode/src/app/scraping/: github_api.rs  mod.rs  package_control.rs
quellcode/src/app/scraping/github_api/: git_blob_text.rs  git_tree.rs  mod.rs  repo_contents.rs  repo_info.rs
quellcode/src/app/ui/: code_view.rs  font_family_chooser.rs  mod.rs  settings.rs  split_button.rs
quellcode/src/app/ui/settings/: imp.rs  mod.rs
quellcode/src/app/ui/settings/asset_store/: asset.rs  details.rs
quellcode/src/app/window/: imp.rs  mod.rs
quellcode/src/asset_store/: indexing.rs  message.rs  mod.rs
quellcode/src/asset_store/asset/: file.rs  mod.rs
quellcode/src/generating/: mod.rs  svg.rs
quellcode/src/generator/: mod.rs  resolve.rs  svg.rs
quellcode/src/scraping/: mod.rs  package_control.rs
quellcode/src/scraping/github_api/: git_blob_text.rs  git_tree.rs  repo_contents.rs  repo_info.rs
quellcode/templates/: config.toml
src/: escape.rs  main.rs  main.rs.bak
sublime-color-scheme/: Cargo.toml  README.md
vscode-theme/: Cargo.toml
website/: package.json
xtask/: Cargo.toml
xtask/src/: main.rs
