[package]
name = "quellcode"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
sublime-color-scheme = { path = "../sublime-color-scheme" }
syntect-vscode = { path = "../vscode-theme" }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_14"] }
image = { version = "0.25.5", features = ["serde"] }
resvg = "0.44.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
svg = "0.18.0"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy", "plist-load"] }
thiserror = "2.0.11"
usvg = "0.44.0"
directories = "6.0"
log = "0.4.26"
env_logger = "0.11.7"
color-eyre = "0.6.3"
once_cell = "1.21.1"
toml = "0.8.20"
toml_edit = "0.22.24"
evalexpr = "12.0.2"
tinytemplate = "1.2.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
time = { version = "0.3.41", features = ["macros", "serde", "parsing", "formatting"] }
url = { version = "2.5.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
whoami = "1.6.0"
dotenvy = "0.15.7"

[build-dependencies]
glib-build-tools = "0.20.0"

