[package]
name = "sublime-color-scheme"
version = "0.1.3"
edition = "2021"
description = "Parse Sublime Text color schemes to Syntect Themes"
license = "Apache-2.0"
repository = "https://github.com/Lepidopteran/quellcode/tree/main/sublime-color-scheme"
categories = ["parser-implementations", "parsing"]
keywords = ["syntect", "sublime", "color-scheme", "parsing", "theme"]
readme = "README.md"

[dependencies]
syntect = { version = "5.2.0", default-features = false, features = ["plist-load"] }
jsonc-parser = { version = "0.26.2", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
log = { version = "0.4.25", features = ["std"] }
palette = "0.7.6"
serde_json = "1.0.138"
thiserror = "2.0.11"

[features]
default = ["regex-onig"]
regex-onig = ["syntect/regex-onig"]
regex-fancy = ["syntect/regex-fancy"]

[dev-dependencies]
env_logger = "0.11.6"
