[package]
name = "sublime-color-scheme"
version = "0.1.1"
edition = "2021"
description = "Parse Sublime Text color schemes to Syntect Themes"
license = "Apache-2.0"
repository = "https://github.com/Lepidopteran/quellcode/tree/main/crates/sublime-color-scheme"
readme = "README.md"

[dependencies]
jsonc-parser = { version = "0.26.2", features = ["serde"] }
log = { version = "0.4.25", features = ["std"] }
palette = "0.7.6"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
syntect = "5.2.0"
thiserror = "2.0.11"

[dev-dependencies]
env_logger = "0.11.6"
